--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!--Assignment 2 - Task 1 starts at line 175-->
-<!--Assignment 2 - Task 2 starts at line 130 -->
-<!--Assignment 2 - Task 3 starts at line 91-->
+<!--Assignment 3 - Task 1 starts at line 80-->
+<!--Assignment 3 - Task 1 starts at line 80-->
+<!--Assignment 3 - Task 1 starts at line 80-->
+<!--Assignment 3 - Task 1 starts at line 80-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -73,39 +74,154 @@
             <a data-toggle="modal" data-target="#loginModal">
               <span class="fa fa-sign-in"></span>Login
             </a>
-
           </span>
         </div>
       </div>
     </nav>
-    <div id="loginModal" class="modal fade" role="dialog">
-      <div class="modal-dialog" role="content">
+
+    <!--Creating the form as a modal-->
+    <div id="reservationModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="contentinfo">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Login</h4>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Reserve a Table</h4>
+            <button class="close" type="button" data-dismiss="modal">
+              &times;
+            </button>
           </div>
           <div class="modal-body">
             <form>
               <div class="form-group row">
-                <div class="col-sm-4">
-                  <label for="email" class="col-form-label sr-only">Email</label>
-                    <input type="email" name="email" id="email" class="form-control form-control-sm mr-1" placeholder="Enter email">
+                <div class="col-12 col-sm-2">
+                  <label for="guests" class="col-form-label"
+                    >Number of Guests</label
+                  >
                 </div>
-                <div class="col-sm-4">
-                  <label for="password" class="col-form-label sr-only">Password</label>
-                    <input type="password" name="password" id="password" class="form-control form-control-sm mr-1" placeholder="Password">
-                </div>
-                <div class="col-sm-auto">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox">
-                    <label class="form-check-label">Remember Me</label>
+                <div class="col">
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="radioOptions"
+                      id="radio1"
+                      value="one"
+                    />
+                    <label class="form-check-label" for="radio1">1</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="radioOptions"
+                      id="radio2"
+                      value="two"
+                    />
+                    <label class="form-check-label" for="radio2">2</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="radioOptions"
+                      id="radio3"
+                      value="three"
+                    />
+                    <label class="form-check-label" for="radio3">3</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="radioOptions"
+                      id="radio4"
+                      value="four"
+                    />
+                    <label class="form-check-label" for="radio4">4</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="radioOptions"
+                      id="radio5"
+                      value="five"
+                    />
+                    <label class="form-check-label" for="radio5">5</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="radioOptions"
+                      id="radio6"
+                      value="six"
+                    />
+                    <label class="form-check-label" for="radio6">6</label>
                   </div>
                 </div>
               </div>
               <div class="form-group row">
-                <button type="button" data-dismiss="modal" class="btn btn-secondary btn-sm ml-auto">Cancel</button>
-                <button type="submit" class="btn btn-primary btn-sm ml-1">Sign In</button>
+                <div class="col-12 col-sm-2">
+                  <label for="section" class="col-form-label">Section</label>
+                </div>
+                <div class="col-12 col-sm-4">
+                  <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-success active">
+                      <input
+                        type="radio"
+                        name="options"
+                        id="option1"
+                        value="Non-smoking"
+                        autocomplete="off"
+                        checked
+                      />Non-smoking
+                    </label>
+                    <label class="btn btn-danger">
+                      <input
+                        type="radio"
+                        name="options"
+                        id="option2"
+                        value="smoking"
+                        autocomplete="off"
+                      />Smoking
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-12 col-sm-2">
+                  <label class="col-form-label">Date and Time</label>
+                </div>
+                <div class="col-12 col-sm-4">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="date"
+                    placeholder="Date"
+                  />
+                </div>
+                <div class="col-12 col-sm-4">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="time"
+                    placeholder="Time"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col offset-0 offset-sm-2">
+                  <button
+                    type="button"
+                    class="btn btn-secondary ml-auto"
+                    data-dismiss="modal"
+                  >
+                    Cancel
+                  </button>
+                  <button type="submit" class="btn btn-primary ml-1">
+                    Reserve
+                  </button>
+                </div>
               </div>
             </form>
           </div>
@@ -113,7 +229,67 @@
       </div>
     </div>
 
-
+    <!--Login Modal-->
+    <div id="loginModal" class="modal fade" role="dialog">
+      <div class="modal-dialog" role="content">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Login</h4>
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group row">
+                <div class="col-sm-4">
+                  <label for="email" class="col-form-label sr-only"
+                    >Email</label
+                  >
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    class="form-control form-control-sm mr-1"
+                    placeholder="Enter email"
+                  />
+                </div>
+                <div class="col-sm-4">
+                  <label for="password" class="col-form-label sr-only"
+                    >Password</label
+                  >
+                  <input
+                    type="password"
+                    name="password"
+                    id="password"
+                    class="form-control form-control-sm mr-1"
+                    placeholder="Password"
+                  />
+                </div>
+                <div class="col-sm-auto">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" />
+                    <label class="form-check-label">Remember Me</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <button
+                  type="button"
+                  data-dismiss="modal"
+                  class="btn btn-secondary btn-sm ml-auto"
+                >
+                  Cancel
+                </button>
+                <button type="submit" class="btn btn-primary btn-sm ml-1">
+                  Sign In
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <header class="jumbotron">
       <div class="container">
@@ -129,16 +305,110 @@
           <div class="col-12 col-sm-3 align-self-center">
             <img src="img/logo.png" alt="logo" class="img-fluid" />
           </div>
-          <div class="col-12 col-sm-3 align-self-center">
-            <a role="button" class="btn btn-block btn-lg btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reservations">Reserve Table</a>
+          <div class="col-12 col-sm-3 align-self-center text-center">
+            <button
+              type="button"
+              class="btn btn-block btn-lg btn-warning"
+              data-toggle="modal"
+              data-target="#reservationModal"
+            >
+              Reserve Table
+            </button>
           </div>
         </div>
       </div>
     </header>
-
+    <!--Carousel-->
     <div class="container">
+      <div class="row row-content">
+        <div class="col">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img
+                  src="img/uthappizza.png"
+                  alt="uthappizza"
+                  class="d-block img-fluid"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>
+                    Uthappizza <span class="badge badge-danger">HOT</span>
+                    <span class="badge badge-pill badge-dark">$4.99</span>
+                  </h2>
+                  <p class="d-none d-sm-block">
+                    unique combination of Indian Uthappam (pancake) and Italian
+                    pizza, topped with Cerignola olives, ripe vine cherry
+                    tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.
+                  </p>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <img
+                  src="img/buffet.png"
+                  alt="buffet"
+                  class="d-block img-fluid"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>
+                    Weekend Grand Buffet
+                    <span class="badge badge-danger">NEW</span>
+                  </h2>
+                  <p class="d-none d-sm-block">
+                    Featuring mouthwatering combinations with a choice of five
+                    different salads, six enticing appetizers, six main entrees
+                    and five choicest desserts. Free flowing bubbly and soft
+                    drinks. All for just $19.99 per person
+                  </p>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <img
+                  src="img/alberto.png"
+                  alt="alberto"
+                  class="d-block img-fluid"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h2>Alberto Somayya</h2>
+                  <h4>Executive Chef</h4>
+                  <p class="d-none d-sm-block">
+                    Award winning three-star Michelin chef with wide
+                    International experience having worked closely with whos-who
+                    in the culinary world, he specializes in creating
+                    mouthwatering Indo-Italian fusion experiences.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <ol class="carousel-indicators">
+              <li
+                data-target="#myCarousel"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <a
+              class="carousel-control-prev"
+              href="#myCarousel"
+              role="button"
+              data-slide="previous"
+            >
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#myCarousel"
+              role="button"
+              data-slide="next"
+            >
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
+        </div>
+      </div>
       <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
           <h3>Our Lipsmacking Culinary Creations</h3>
@@ -216,85 +486,6 @@
         </div>
       </div>
     </div>
-    <div class="row row-content align-items-center"  id="reservations">
-      <div class="col-12 col-sm-8 offset-sm-2">
-        <div class="card">
-          <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-          <div class="card-body">
-            <form>
-              <div class="form-group row">
-                  <label class="col-12 col-sm-2">Number of Guests</label>
-                  <div class="col-12 col-sm-10">
-                    <div class="form-check form-check-inline">
-                      <input class="form-check-input" 
-                      type="radio" 
-                      name="radioOptions" 
-                      id="radio1" 
-                      value="one">
-                      <label class="form-check-label" for="radio1">1</label>
-                   </div>
-                   <div class="form-check form-check-inline">
-                     <input class="form-check-input" 
-                     type="radio" 
-                     name="radioOptions" 
-                     id="radio2" 
-                     value="two">
-                     <label class="form-check-label" for="radio2">2</label>
-                   </div>
-                   <div class="form-check form-check-inline">
-                     <input class="form-check-input" 
-                     type="radio" 
-                     name="radioOptions" 
-                     id="radio3" 
-                     value="three">
-                     <label class="form-check-label" for="radio3">3</label>
-                   </div>
-                   <div class="form-check form-check-inline">
-                     <input class="form-check-input" 
-                     type="radio" 
-                     name="radioOptions" 
-                     id="radio4" 
-                     value="four">
-                     <label class="form-check-label" for="radio4">4</label>
-                   </div>
-                   <div class="form-check form-check-inline">
-                     <input class="form-check-input" 
-                     type="radio" 
-                     name="radioOptions" 
-                     id="radio5" 
-                     value="five">
-                     <label class="form-check-label" for="radio5">5</label>
-                   </div>
-                   <div class="form-check form-check-inline">
-                     <input class="form-check-input" 
-                     type="radio" 
-                     name="radioOptions" 
-                     id="radio6" 
-                     value="six">
-                     <label class="form-check-label" for="radio6">6</label>
-                   </div>
-                  </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                <div class="col-12 col-sm-4">
-                  <input type="text" class="form-control" id="date" placeholder="Date">
-                </div>
-                <div class="col-12 col-sm-4">
-                  <input type="text" class="form-control" id="time" placeholder="Time">
-                </div>
-              </div>
-              <div class="form-group row">
-                <div class="col-12 col-sm-8 offset-sm-2">
-                  <button type="submit" class="btn btn-primary">Reserve</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
 
     <footer class="footer">
       <div class="container">
@@ -364,10 +555,5 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function(){
-          $('[data-toggle="tooltip"]').tooltip();
-      });
-  </script>
   </body>
 </html>
